Enable crc32c in couchstore. Changes couchstore file version.
This increases the couchstore version number from 11 to 12.

The idea is that we wish to utilise crc32c for efficient checksumming.

The strategy is to bump the version number.
 - version 11 files use the old crc.
 - version 12 files use the new crc.

1) Brand new couchstore files will be version 12.

1a) However the API allows users to open files and force
    legacy CRC, this is in-case any couchstore user doesn't
    want to upgrade (e.g. erlang couchdb).

    Opening a file with COUCHSTORE_OPEN_WITH_LEGACY_CRC will
    force the version to 11 if the file is new. If the file is
    not new the open is failed if the file version is not 11.

2) Compaction is the method to have upgrades performed.

   A new compaction flag COUCHSTORE_COMPACT_FLAG_UPGRADE_DB
   informs compaction that if the file to be compacted is
   version 11, then the new file is version 12.

  If the flag is not specified then compaction writes the new
  file with same version/crc as the source file.

Change-Id: I25573f5107408ba8040d06033abb1b6fcbde8414

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,7 @@ ENDIF(WIN32)
 
 SET(COUCHSTORE_SOURCES src/arena.cc src/bitfield.c src/btree_modify.cc
             src/btree_read.cc src/couch_db.cc src/couch_file_read.cc
-            src/couch_file_write.cc src/couch_save.cc src/crc32.c
+            src/couch_file_write.cc src/couch_save.cc src/crc32.cc
             src/db_compact.cc src/file_merger.cc src/file_name_utils.c
             src/file_sorter.cc src/iobuffer.cc src/llmsort.cc
             src/mergesort.cc src/node_types.cc src/reduces.cc
